modified style cart

--- a/cart.html
+++ b/cart.html
@@ -160,7 +160,7 @@
                         <div class="coupon-wrap">
                             <div class="coupon-inner">
                                 <div class="coupon-code">
-                                    <input type="number" id="coupon" name="coupon" placeholder="Coupon code">
+                                    <input type="text" id="coupon" name="coupon" placeholder="Coupon code">
                                     <button class="coupon_button" type="submit" >Apply </button>
                                     <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
                                 </div>
@@ -255,7 +255,7 @@
                         </div>
                     </div>
                 </div> <!-- footer_section_about -->
-             
+
                 <div class="footer_section_active">
                     <h2>Stay in touch</h2>
                     <form action=""  name="subscribe-form" class="subscribe_form">
