--- a/cart2.html
+++ b/cart2.html
@@ -183,11 +183,13 @@
                     </div>
                 </div> <!-- footer_section_about -->
                 <div class="footer_section_active">
-                    <form action="" name="subscribe-form" class="subscribe_form">
-                        <h2>Stay in touch</h2>
+                    <h2>Stay in touch</h2>
+                    <form action="" class="subscribe_form">
                         <input type="email" id="fname" name="fname" placeholder="Your E-mail">
-                        <button class="subscribe_button" type="submit" >Subscribe </button>
+                        <button class="subscribe_button" type="submit">Subscribe</button>
+                        <!--<img src="img/icons_svg/mail.svg" alt="mail"> -->
                     </form>
+
                     <div class="footer_social">
                         <h2>Follow us</h2>
                         <div class="social_icon">
