modified country name

--- a/cart.html
+++ b/cart.html
@@ -73,8 +73,8 @@
                     </div>
                     <div class="form-input">
                         <div class="input-text required has-error has-success ">
-                            <select name="country" class="cs-select cs-skin-elastic"  title="country">
-                                <option value="" disabled selected>Country</option>
+                            <select name="country" class="cs-select cs-skin-elastic cs-skin-country" title="country">
+                                <option value="country" disabled selected>Country</option>
                                 <option value="ukraine" >Ukraine</option>
                                 <option value="russion">Russian Federation</option>
                                 <option value="belarus">Belarus</option>
