--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 <h1>Publishers</h1>
                 <p><span class="text_info">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam.</span>
                 </p>
-                <span class="btn">  <a href="#" class="btn">All books</a></span>
+               <a href="#" class="btn">All books</a>
             </div>
             <div class="partners">
                 <ul class="partners_block">
