add z-index fjr wrap-login

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
                 <div class="clearfix"></div>
             </div>
             <div class="presentation_book">
-
                 <div class="presentation_text">
                     <h2>A major update in the Detective section </h2>
                 </div>
@@ -241,7 +240,6 @@
                     <li><a href="#">Rich Riordan</a></li>
                 </ul>
                 <div class="clearfix"></div>
-                <!--  <hr> -->
             </nav>
             <div class="literature_writes">
                 <div class="section_about_autor">
@@ -249,13 +247,12 @@
                         <h2>John Fowles</h2>
                     </div>
                     <br>
-                    <div class="writer_info"><span
-                            class="fontcaption_orange">31 March 1926 Leigh-on-Sea, Essex, England</span><span
-                            class="literature_vote"> 5 <img src="img/star.png" width="18" height="17" alt="star"></span>
+                    <div class="writer_info"><span class="fontcaption_orange">31 March 1926 Leigh-on-Sea, Essex, England</span>
+                        <span class="literature_vote"> 5 <img src="img/star.png" width="18" height="17" alt="star"></span>
                     </div>
                     <div class="clearfix"></div>
                     <div>
-                            <span class="fontcaption_text">You are right. He did not. But  millions of Germans did betray their selves.
+                        <span class="fontcaption_text">You are right. He did not. But  millions of Germans did betray their selves.
                                 That was the tragedy. Not that one man had the courage to be evil.
                                 But that milions had not the courage.</span>
                     </div>
@@ -266,8 +263,7 @@
                 <div class="section_book_autor">
                     <h3>About</h3>
                     <br>
-                    <p><span
-                            class="font_comment_text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum </span>
+                    <p><span class="font_comment_text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum </span>
                     </p>
                     <br>
                     <h3>Books</h3>
@@ -276,8 +272,7 @@
                         <a href="#"><img src="img/b2.png" alt="book" width="73" height="114"></a>
                         <a href="#"><img src="img/b3.png" alt="book" width="73" height="114"></a>
                         <a href="#"><img src="img/b4.png" alt="book" width="73" height="114"></a>
-                        <div class="bookmark">20<img src="img/icons_svg/icon_book.png" width="15" height="17"
-                                                     alt="bookmark">
+                        <div class="bookmark">20<img src="img/icons_svg/icon_book.png" width="15" height="17"                                                     alt="bookmark">
                         </div>
                     </div>
                     <div>
@@ -298,18 +293,15 @@
             <ul>
                 <li><a href="#"><img src="img/111.png" alt="picture" width="342" height="553"></a>
                     <h2><a href="#">How literature can help people cope with mental health problems</a></h2>
-                    <a href="#"><span class="font_orange">Nathan Sandoval </span> <span
-                            class="fontcaption_grey"> | 15.10.16</span></a>
+                    <a href="#"><span class="font_orange">Nathan Sandoval </span> <span class="fontcaption_grey"> | 15.10.16</span></a>
                 </li>
                 <li><a href="#"><img src="img/222.png" alt="picture" width="342" height="553"></a>
                     <h2><a href="#">Sales of 'Harry Potter and the Cursed Child' script book hit</a></h2>
-                    <a href="#"><span class="font_orange">Jacqueline Taylor</span> <span
-                            class="fontcaption_grey"> | 23.10.16</span></a>
+                    <a href="#"><span class="font_orange">Jacqueline Taylor</span> <span class="fontcaption_grey"> | 23.10.16</span></a>
                 </li>
                 <li><a href="#"><img src="img/333.png" alt="picture" width="342" height="553"></a>
                     <h2><a href="">Marvel introduces character Riri Williams, a woman who takes ov</a></h2>
-                    <a href="#"><span class="font_orange">Elizabeth Dixon </span> <span
-                            class="fontcaption_grey">| 16.10.15</span></a>
+                    <a href="#"><span class="font_orange">Elizabeth Dixon </span> <span class="fontcaption_grey">| 16.10.15</span></a>
                 </li>
             </ul>
         </div>
@@ -331,8 +323,7 @@
                 </p>
             </div>
             <div class="block_news">
-                <h3> BBC to produce Les Miserables as 6 - part TV special
-                    - The Guardian</h3>
+                <h3> BBC to produce Les Miserables as 6 - part TV special - The Guardian</h3>
                 <p><span class="font_orange">Cyntia Simmon</span> <span class="fontcaption_grey"> | 28.10.16 </span>
                 </p>
             </div>
@@ -414,8 +405,8 @@
 
                 <div class="popular-book-text">
                     <p><span class="book_series_fonts">Hobbies</span></p>
-                    <p><span class="font_slider_sum">85</span> <img src="img/icons_svg/icon_book.png" width="15" height="17"
-                                                                    alt="icon_book"></p>
+                    <p><span class="font_slider_sum">85</span>
+                        <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"></p>
                 </div>
             </div>
             <div class="popular_book">
@@ -459,8 +450,7 @@
                     <li><a href="#"><img src="img/partners/penguin.png" alt="logo" width="133" height="67"></a></li>
                     <li><a href="#"><img src="img/partners/littlebrown.png" alt="logo" width="82" height="81"></a></li>
                     <li><a href="#"><img src="img/partners/vintagebooks.png" alt="logo" width="90" height="60"></a></li>
-                    <li><a href="#"><img src="img/partners/FarrarStrausGiroux.png" alt="logo" width="159" height="120"></a>
-                    </li>
+                    <li><a href="#"><img src="img/partners/FarrarStrausGiroux.png" alt="logo" width="159" height="120"></a></li>
                     <li><a href="#"><img src="img/partners/AMPlogo.png" alt="logo" width="186" height="74"></a></li>
                     <li><a href="#"><img src="img/partners/quirk.png" alt="logo" width="64" height="67"></a></li>
                     <li><a href="#"><img src="img/partners/saraband.png" alt="logo" width="115" height="24"></a></li>
