fixed your cart input country

--- a/cart.html
+++ b/cart.html
@@ -7,8 +7,6 @@
     <title>Cart</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css"><!-- fixme: Страница должны быть адаптивной. На маленьких расширениях не влезают поля   -->
-    <link rel="stylesheet" type="text/css" href="css/cs-select.css" />
-    <link rel="stylesheet" type="text/css" href="css/cs-skin-elastic.css" />
 </head>
 <body>
     <div id="your-cart">
@@ -73,7 +71,7 @@
                     </div>
                     <div class="form-input">
                         <div class="input-text required has-error has-success ">
-                            <select name="country" class="cs-select cs-skin-elastic cs-skin-country" title="country">
+                            <select name="country" class="cs-select cs-skin-country" title="country">
                                 <option value="country" disabled selected>Country</option>
                                 <option value="ukraine" >Ukraine</option>
                                 <option value="russion">Russian Federation</option>
