change login form

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-<div id="popup">
+<!--<div id="popup">
     <div class="container">
         <div id="login">
             <a href="#popup-demo"><img src="img/corpse.png" width="60" height="93" alt="cover"></a>
@@ -16,57 +16,57 @@
             <a href="#">x</a>
         </div>
     </div>
-</div>
+</div> -->
 
     
-<div id="anna-sl">
-    <div class="container">
-        <h1>slider</h1>
-        <div class="anna-inner-sl">
-            <div id="anna-wrap-sl">
-                <div class="check-left">
-                    <input type="radio" id="arrow-l">
-                    <label for="arrow-l"></label>
-                </div>
+<!--<div id="anna-sl">-->
+    <!--<div class="container">-->
+        <!--<h1>slider</h1>-->
+        <!--<div class="anna-inner-sl">-->
+            <!--<div id="anna-wrap-sl">-->
+                <!--<div class="check-left">-->
+                    <!--<input type="radio" id="arrow-l">-->
+                    <!--<label for="arrow-l"></label>-->
+                <!--</div>-->
 
-                <label for="d1">1</label>
-                <label for="d2">2</label>
-                <label for="d3">3</label>
-                <label for="d4">4</label>
+                <!--<label for="d1">1</label>-->
+                <!--<label for="d2">2</label>-->
+                <!--<label for="d3">3</label>-->
+                <!--<label for="d4">4</label>-->
 
-                <div class="inner-block">
-                    <input type="radio" id="d1" class="sk" checked >
-                    <div class="r">
-                    <img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">
-                    </div>
+                <!--<div class="inner-block">-->
+                    <!--<input type="radio" id="d1" class="sk" checked >-->
+                    <!--<div class="r">-->
+                    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
+                    <!--</div>-->
 
-                </div>
-                <div class="inner-block">
-                    <input type="radio" id="d2" class="sk">
-                    <div class="r">
-                    <img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">
-                    </div>
-                </div>
-                <div class="inner-block">
-                    <input type="radio" id="d3" class="sk">
-                    <div class="r">
-                    <img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">
-                    </div>
-                </div>
-                <div class="inner-block">
-                    <input type="radio" id="d4" class="sk">
-                    <div class="r">
-                    <img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">
-                    </div>
-                </div>
-                <div class="check-right">
-                    <input type="radio" id="arrow-2">
-                    <label for="arrow-2"></label>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+                <!--</div>-->
+                <!--<div class="inner-block">-->
+                    <!--<input type="radio" id="d2" class="sk">-->
+                    <!--<div class="r">-->
+                    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="inner-block">-->
+                    <!--<input type="radio" id="d3" class="sk">-->
+                    <!--<div class="r">-->
+                    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="inner-block">-->
+                    <!--<input type="radio" id="d4" class="sk">-->
+                    <!--<div class="r">-->
+                    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="check-right">-->
+                    <!--<input type="radio" id="arrow-2">-->
+                    <!--<label for="arrow-2"></label>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 
 <!-- <div id="slider-wrap">
@@ -122,7 +122,11 @@
             <label for="s3">3</label>
             <label for="s4">4</label>
 
-                <input checked class="slide-picture" type="radio" id="s1" name="slider-pic" >
+                <input checked class="slide-picture" type="radio" id="s1" name="slider-pic">
+                <input class="slide-picture" type="radio" id="s2" name="slider-pic" >
+                <input class="slide-picture" type="radio" id="s3" name="slider-pic" >
+                <input class="slide-picture" type="radio" id="s4" name="slider-pic" >
+
                 <div class="inner-slide">
                     <div class="popular_book">
                         <!--<div class="popular_book_img"> -->
@@ -171,8 +175,8 @@
                 </div>
 
 
-                <input class="slide-picture" type="radio" id="s2" name="slider-pic" >
-                    <div class="inner-slide">
+
+                <div class="inner-slide">
                         <div class="popular_book">
                             <!-- <div class="popular_book_img"> -->
                             <img class="cover1" src="img/popularseries/the-old-man.png" alt="the-old-man" width="119" height="185">
@@ -220,8 +224,8 @@
                     </div>
 
 
-                <input class="slide-picture" type="radio" id="s3" name="slider-pic" >
-            <div class="inner-slide">
+
+                <div class="inner-slide">
                 <div class="popular_book">
                     <!-- <div class="popular_book_img"> -->
                     <img class="cover1" src="img/popularseries/childrens-book-cover1.png" alt="childrens-book-cover1" width="119" height="185">
@@ -269,8 +273,8 @@
             </div>
 
 
-                <input class="slide-picture" type="radio" id="s4" name="slider-pic" >
-            <div class="inner-slide">
+
+                <div class="inner-slide">
                 <div class="popular_book">
                     <!-- <div class="popular_book_img"> -->
                     <img class="cover1" src="img/popularseries/birds-cover.png" alt="birds-cover" width="119" height="185">
