--- a/slider.html
+++ b/slider.html
@@ -42,7 +42,7 @@
 
 
 
-                <div class="inner-slide">
+            <div class="inner-slide">
             <input class="slide-picture" type="radio" id="s2" name="slider-pic" >
 
                 <div class="popular_book">
@@ -78,13 +78,13 @@
                 <input class="slide-picture" type="radio" id="s4" name="slider-pic">
                 <div class="popular_book">
                     <!-- <div class="popular_book_img"> -->
-                    <img class="cover1" src="img/popularseries/childrens-book-cover1.png" alt="childrens-book-cover1" width="119" height="185">
-                    <img class="cover2" src="img/popularseries/hi-kids.png" alt="hi-kids" width="132" height="205">
-                    <img class="cover3" src="img/popularseries/childrens-book-cover2.png" alt="childrens-book-cover2" width="146" height="227">
+                    <img class="cover1" src="img/popularseries/the-old-man.png" alt="the-old-man" width="119" height="185">
+                    <img class="cover2" src="img/popularseries/adams.png" alt="adams" width="132" height="205">
+                    <img  class="cover3" src="img/popularseries/guintar-method.png" alt="guintar-method" width="146" height="227">
                     <!-- </div> -->
                     <div class="popular-book-text">
-                        <p><span class="book_series_fonts">Childrens literature</span></p>
-                        <p><span class="font_slider_sum">54</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
+                        <p><span class="book_series_fonts">Hobbies</span></p>
+                        <p><span class="font_slider_sum">85</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
                     </div>
                 </div>
                 <div class="arrow-right-nav">
