--- a/index.html
+++ b/index.html
@@ -544,7 +544,8 @@
 
     <div class="container">
         <div id="wrap-login">
-            <div class="transp-back-wrap-login"></div>
+            <div class="inner-wrap-login">
+            <!-- <div class="transp-back-wrap-login"></div> -->
             <a href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
             <p>Login</p>
             <form id="form-login" action="">
@@ -554,20 +555,23 @@
                 <div class="inner-login-password">
                     <input type="text" placeholder="Password" name="login-password">
                 </div>
-                <div class="inner-checkbox-remember">
-                    <input type="checkbox" class="checkbox-remember" id="remember" name="remember">
-                    <label for="remember">Remember me</label>
-                </div>
-                <div class="forgot-password">
-                    <a href="#">Forgot password</a>
+                <div class="inner-login-form">
+                    <div class="inner-checkbox-remember">
+                        <input type="checkbox" class="checkbox-remember" id="remember" name="remember">
+                        <label for="remember">Remember me</label>
+                    </div>
+                    <div class="forgot-password">
+                        <a href="#">Forgot password</a>
+                    </div>
+                    <div class="clearfix"></div>
                 </div>
                 <div class="sign-in">
-                    <input type="button" value="Sign in">
+                    <input type="submit" value="Sign in">
                 </div>
                 <!-- <div class="create-account"> -->
                 <a href="#" class="input-create">Create account<img src="img/rectangle55.png" width="17" height="13"
                                                                     alt="arrow"></a>
-                <div class="hr-form"></div>
+                <!-- <div class="hr-form"></div> -->
                 <div class="inner-login-social">
                     <h3>Sign in with social:</h3>
                     <div class="login-social">
@@ -577,6 +581,7 @@
                     </div>
                 </div>
             </form>
+            </div>
         </div>
     </div>
 
