--- a/cart2.html
+++ b/cart2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>cart2</title>
+    <link href="https://fonts.googleapis.com/css?family=Amiri|Lato:400,700|Ramaraja|Rozha+One|PT+Serif|Work+Sans|Yrsa" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css"><!-- fixme: Страница должна быть адаптивной  -->
 </head>
@@ -211,38 +212,44 @@
 
         <div class="container">
             <div id="wrap-login">
-                <div class="transp-back-wrap-login"></div>
-                <a href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
-                <p>Login</p>
-                <form id="form-login" action="">
-                    <div class="inner-login-email">
-                        <input type="text" class="" placeholder="E-mail" name="login-email">
-                    </div>
-                    <div class="inner-login-password">
-                        <input type="text" placeholder="Password" name="login-password">
-                    </div>
-                    <div class="inner-checkbox-remember">
-                        <input type="checkbox" class="checkbox-remember" id="remember" name="remember">
-                        <label for="remember">Remember me</label>
-                    </div>
-                    <div class="forgot-password">
-                        <a href="#">Forgot password</a>
-                    </div>
-                    <div class="sign-in">
-                        <input type="button" value="Sign in">
-                    </div>
-                    <!-- <div class="create-account"> -->
-                    <a href="#" class="input-create">Create account<img src="img/rectangle55.png" width="17" height="13" alt="arrow"></a>
-                    <div class="hr-form"></div>
-                    <div class="inner-login-social">
-                        <h3>Sign in with social:</h3>
-                        <div class="login-social">
-                            <a href="#"><img src="img/icons_svg/rectangle57.png" width="10" height="18" alt="facebook"></a>
-                            <a href="#"><img src="img/icons_svg/rectangle58.png" width="17" height="14" alt="pinterest"></a>
-                            <a href="#"><img src="img/icons_svg/Google.svg" alt="google"></a>
+                <div class="inner-wrap-login">
+                    <div class="transp-back-wrap-login"></div>
+                    <a href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
+                    <p>Login</p>
+                    <form id="form-login" action="">
+                        <div class="inner-login-email">
+                            <input type="text" class="" placeholder="E-mail" name="login-email">
                         </div>
-                    </div>
-                </form>
+                        <div class="inner-login-password">
+                            <input type="text" placeholder="Password" name="login-password">
+                        </div>
+                        <div class="inner-login-form">
+                            <div class="inner-checkbox-remember">
+                                <input type="checkbox" class="checkbox-remember" id="remember" name="remember">
+                                <label for="remember">Remember me</label>
+                            </div>
+                            <div class="forgot-password">
+                                <a href="#">Forgot password</a>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="sign-in">
+                            <input type="submit" value="Sign in">
+                        </div>
+                        <!-- <div class="create-account"> -->
+                        <a href="#" class="input-create">Create account<img src="img/rectangle55.png" width="17" height="13"
+                                                                            alt="arrow"></a>
+                        <!-- <div class="hr-form"></div> -->
+                        <div class="inner-login-social">
+                            <h3>Sign in with social:</h3>
+                            <div class="login-social">
+                                <a href="#"><img src="img/icons_svg/rectangle57.png" width="10" height="18" alt="facebook"></a>
+                                <a href="#"><img src="img/icons_svg/rectangle58.png" width="17" height="14" alt="pinterest"></a>
+                                <a href="#"><img src="img/icons_svg/Google.svg" alt="google"></a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
 
