--- a/cart.html
+++ b/cart.html
@@ -32,8 +32,8 @@
 
         <div class="cart-wrap container">
             <h1>Your cart</h1>
-            <h2>Billing address</h2>
             <form id="cart" action="">
+                <h2>Billing address</h2>
              <div class="form-cart">
                 <div class="leftpart">
                     <div class="gender checkbox-design">
@@ -155,50 +155,48 @@
                 </form>
 
                 <div class="count-form-inner ">
-                    <form action="\">
-                        <div class="coupon-wrap">
-                            <div class="coupon-inner">
+                    <form class="coupon-form" action="\" >
+                        <!--<div class="coupon-wrap">-->
+                            <!--<div class="coupon-inner">-->
                                 <div class="coupon-code">
                                     <input type="text" id="coupon" name="coupon" placeholder="Coupon code">
                                     <button class="coupon_button" type="submit" >Apply </button>
                                     <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
                                 </div>
-                            </div>
-                        </div>
+                            <!--</div>-->
+                        <!--</div>-->
                     </form>
-
-                        <div class="proceed-wrap">
-                            <div class="proceed-checkbox">
-                                <input type="checkbox" id="checkbox-proceed" class="checkbox-accept" >
-                                <label for="checkbox-proceed">I accept the</label>
-                                <a href="#">Terms & conditions </a>
+                    <div class="proceed-wrap">
+                        <div class="proceed-checkbox">
+                            <input type="checkbox" id="checkbox-proceed" class="checkbox-accept">
+                            <label for="checkbox-proceed">I accept the</label>
+                            <a href="#">Terms & conditions </a>
+                        </div>
+                        <div class="proceed-inner">
+                            <div class="proceed-count">
+                                <table>
+                                    <tr>
+                                        <td class="proceed-count-font1">Shipping</td>
+                                        <td class="proceed-count-font2">$4.95</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="proceed-count-font1">Subtotal</td>
+                                        <td class="proceed-count-font2">$25</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="proceed-count-font3">Total</td>
+                                        <td class="proceed-count-font4">$28.50</td>
+                                    </tr>
+                                </table>
                             </div>
-                            <div class="proceed-inner">
-                                <div class="proceed-count">
-                                    <table>
-                                        <tr>
-                                            <td><span class="proceed-count-font1">Shipping</span></td>
-                                            <td><span class="proceed-count-font2">$4.95</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td><span class="proceed-count-font1">Subtotal</span></td>
-                                            <td> <span class="proceed-count-font2">$25</span></td>
-                                        </tr>
-                                        <tr>
-                                            <td><span class="proceed-count-font3"> Total</span></td>
-                                            <td><span class="proceed-count-font4"> $28.50</span></td>
-                                        </tr>
-                                    </table>
-                                </div>
-                                <div class="proceed-payment">
-                                    <input type="submit" form="cart" class="btn" value="Proceed to payment">
-                                </div>
-                                <div class="clearfix"></div>
+                            <div class="proceed-payment">
+                                <input type="submit" form="cart" class="btn" value="Proceed to payment">
                             </div>
                             <div class="clearfix"></div>
                         </div>
+                        <div class="clearfix"></div>
+                    </div>
                     <div class="clearfix"></div>
-
                 </div>
             </div>
 
