--- a/slider.html
+++ b/slider.html
@@ -15,10 +15,10 @@
             <h1>Popular series</h1>
         </div>
         <div id="slider-popular">
-            <div class="arrow-left">
-                <input type="radio" id="arrow-left-nav" name="arrow">
-                <label for="arrow-left-nav"><img src="img/icons_svg/arrow-left.svg" alt="arrow-left"></label>
-            </div>
+            <!--<div class="arrow-left">-->
+                <!--<input type="radio" id="arrow-left-nav" name="arrow">-->
+                <!--<label for="arrow-left-nav"><img src="img/icons_svg/arrow-left.svg" alt="arrow-left"></label>-->
+            <!--</div>-->
 
             <label for="s1">1</label>
             <label for="s2">2</label>
@@ -89,10 +89,10 @@
                         <p><span class="font_slider_sum">85</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
                     </div>
                 </div>
-                <div class="arrow-right-nav">
-                    <input type="radio" id="arrow-right-nav" name="arrow">
-                    <label for="arrow-right-nav"><img src="img/icons_svg/arrow-right.svg" alt="arrow-right"></label>
-                </div>
+                <!--<div class="arrow-right-nav">-->
+                    <!--<input type="radio" id="arrow-right-nav" name="arrow">-->
+                    <!--<label for="arrow-right-nav"><img src="img/icons_svg/arrow-right.svg" alt="arrow-right"></label>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
