--- a/login.html
+++ b/login.html
@@ -9,104 +9,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-<!--<div id="popup">
-    <div class="container">
-        <div id="login">
-            <a href="#popup-demo"><img src="img/corpse.png" width="60" height="93" alt="cover"></a>
-        </div>
-        <div id="popup-demo">
-            <a href="#">x</a>
-        </div>
-    </div>
-</div> -->
 
-    
-<!--<div id="anna-sl">-->
-    <!--<div class="container">-->
-        <!--<h1>slider</h1>-->
-        <!--<div class="anna-inner-sl">-->
-            <!--<div id="anna-wrap-sl">-->
-                <!--<div class="check-left">-->
-                    <!--<input type="radio" id="arrow-l">-->
-                    <!--<label for="arrow-l"></label>-->
-                <!--</div>-->
-
-                <!--<label for="d1">1</label>-->
-                <!--<label for="d2">2</label>-->
-                <!--<label for="d3">3</label>-->
-                <!--<label for="d4">4</label>-->
-
-                <!--<div class="inner-block">-->
-                    <!--<input type="radio" id="d1" class="sk" checked >-->
-                    <!--<div class="r">-->
-                    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
-                    <!--</div>-->
-
-                <!--</div>-->
-                <!--<div class="inner-block">-->
-                    <!--<input type="radio" id="d2" class="sk">-->
-                    <!--<div class="r">-->
-                    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="inner-block">-->
-                    <!--<input type="radio" id="d3" class="sk">-->
-                    <!--<div class="r">-->
-                    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="inner-block">-->
-                    <!--<input type="radio" id="d4" class="sk">-->
-                    <!--<div class="r">-->
-                    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="check-right">-->
-                    <!--<input type="radio" id="arrow-2">-->
-                    <!--<label for="arrow-2"></label>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-
-
-<!-- <div id="slider-wrap">
-    <div class="container">
-        <h1>Slider</h1>
-        <div class="inner-slider">
-            <div id="slider">
-                <div class="arrow-left">
-                    <input type="radio" id="arrow-left" name="arrow">
-                    <label for="arrow-left"><img src="img/icons_svg/arrow-left.svg" alt="arrow-left"></label>
-                </div>
-
-                <label for="s1">1</label>
-                <label for="s2">2</label>
-                <label for="s3">3</label>
-
-                    <div>
-                        <input checked class="slide-picture" type="radio" id="s1" name="slider-pic" >
-                        <img src="img/111.png" width="342" height="553" alt="pic1">
-                    </div>
-                    <div>
-                        <input class="slide-picture" type="radio" id="s2" name="slider-pic" >
-                        <img src="img/222.png" width="342" height="553" alt="pic2">
-                    </div>
-                    <div>
-                        <input class="slide-picture" type="radio" id="s3" name="slider-pic" >
-                        <img src="img/333.png" width="342" height="553" alt="pic3">
-                    </div>
-
-                <div class="arrow-right">
-                    <input type="radio" id="arrow-right" name="arrow">
-                    <label for="arrow-right"><img src="img/icons_svg/arrow-right.svg" alt="arrow-right"></label>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</div> -->
 
     <div id="slider-wrap-popularseries">
         <div class="container">
@@ -114,20 +17,19 @@
             <h1>Popular series</h1>
             </div>
         <div id="slider-popular">
-            <div class="arrow-left">
-                <input type="radio" id="arrow-left-nav" name="arrow">
-                <label for="arrow-left-nav"><img src="img/icons_svg/arrow-left.svg" alt="arrow-left"></label>
-            </div>
-
+            <!--<div class="arrow-left">-->
+                <!--<input type="radio" id="arrow-left-nav" name="arrow">-->
+                <!--<label for="arrow-left-nav"><img src="img/icons_svg/arrow-left.svg" alt="arrow-left"></label>-->
+            <!--</div>-->
             <label for="s1">1</label>
             <label for="s2">2</label>
             <label for="s3">3</label>
             <label for="s4">4</label>
 
-                <input checked class="slide-picture" type="radio" id="s1" name="slider-pic">
-                <input class="slide-picture" type="radio" id="s2" name="slider-pic" >
-                <input class="slide-picture" type="radio" id="s3" name="slider-pic" >
-                <input class="slide-picture" type="radio" id="s4" name="slider-pic" >
+            <input checked class="slide-picture" type="radio" id="s1" name="slider-pic">
+            <input class="slide-picture" type="radio" id="s2" name="slider-pic">
+            <input class="slide-picture" type="radio" id="s3" name="slider-pic">
+            <input class="slide-picture" type="radio" id="s4" name="slider-pic">
 
                 <div class="inner-slide">
                     <div class="popular_book">
@@ -175,9 +77,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
                 <div class="inner-slide">
                         <div class="popular_book">
                             <!-- <div class="popular_book_img"> -->
@@ -224,10 +123,7 @@
                             </div>
                         </div>
                     </div>
-
-
-
-                <div class="inner-slide">
+            <div class="inner-slide">
                 <div class="popular_book">
                     <!-- <div class="popular_book_img"> -->
                     <img class="cover1" src="img/popularseries/childrens-book-cover1.png" alt="childrens-book-cover1" width="119" height="185">
@@ -321,16 +217,113 @@
                         <p><span class="font_slider_sum">54</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
                     </div>
                 </div>
-                <div class="arrow-right-nav">
-                    <input type="radio" id="arrow-right-nav" name="arrow">
-                    <label for="arrow-right-nav"><img src="img/icons_svg/arrow-right.svg" alt="arrow-right"></label>
-                </div>
+                <!--<div class="arrow-right-nav">-->
+                    <!--<input type="radio" id="arrow-right-nav" name="arrow">-->
+                    <!--<label for="arrow-right-nav"><img src="img/icons_svg/arrow-right.svg" alt="arrow-right"></label>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
 </div>
 
+    <!--<div id="popup">
+        <div class="container">
+            <div id="login">
+                <a href="#popup-demo"><img src="img/corpse.png" width="60" height="93" alt="cover"></a>
+            </div>
+            <div id="popup-demo">
+                <a href="#">x</a>
+            </div>
+        </div>
+    </div> -->
 
+
+    <!--<div id="anna-sl">-->
+    <!--<div class="container">-->
+    <!--<h1>slider</h1>-->
+    <!--<div class="anna-inner-sl">-->
+    <!--<div id="anna-wrap-sl">-->
+    <!--<div class="check-left">-->
+    <!--<input type="radio" id="arrow-l">-->
+    <!--<label for="arrow-l"></label>-->
+    <!--</div>-->
+
+    <!--<label for="d1">1</label>-->
+    <!--<label for="d2">2</label>-->
+    <!--<label for="d3">3</label>-->
+    <!--<label for="d4">4</label>-->
+
+    <!--<div class="inner-block">-->
+    <!--<input type="radio" id="d1" class="sk" checked >-->
+    <!--<div class="r">-->
+    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
+    <!--</div>-->
+
+    <!--</div>-->
+    <!--<div class="inner-block">-->
+    <!--<input type="radio" id="d2" class="sk">-->
+    <!--<div class="r">-->
+    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="inner-block">-->
+    <!--<input type="radio" id="d3" class="sk">-->
+    <!--<div class="r">-->
+    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="inner-block">-->
+    <!--<input type="radio" id="d4" class="sk">-->
+    <!--<div class="r">-->
+    <!--<img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="check-right">-->
+    <!--<input type="radio" id="arrow-2">-->
+    <!--<label for="arrow-2"></label>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+
+
+    <!-- <div id="slider-wrap">
+        <div class="container">
+            <h1>Slider</h1>
+            <div class="inner-slider">
+                <div id="slider">
+                    <div class="arrow-left">
+                        <input type="radio" id="arrow-left" name="arrow">
+                        <label for="arrow-left"><img src="img/icons_svg/arrow-left.svg" alt="arrow-left"></label>
+                    </div>
+
+                    <label for="s1">1</label>
+                    <label for="s2">2</label>
+                    <label for="s3">3</label>
+
+                        <div>
+                            <input checked class="slide-picture" type="radio" id="s1" name="slider-pic" >
+                            <img src="img/111.png" width="342" height="553" alt="pic1">
+                        </div>
+                        <div>
+                            <input class="slide-picture" type="radio" id="s2" name="slider-pic" >
+                            <img src="img/222.png" width="342" height="553" alt="pic2">
+                        </div>
+                        <div>
+                            <input class="slide-picture" type="radio" id="s3" name="slider-pic" >
+                            <img src="img/333.png" width="342" height="553" alt="pic3">
+                        </div>
+
+                    <div class="arrow-right">
+                        <input type="radio" id="arrow-right" name="arrow">
+                        <label for="arrow-right"><img src="img/icons_svg/arrow-right.svg" alt="arrow-right"></label>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div> -->
 
 
 </body>
